--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Meta Description for SEO -->
+  <meta name="description" content="Crust & Crumbs: Discover delicious, freshly baked breads and pastries daily. We are committed to delivering quality and flavor in every bite. Contact us to learn more!" />
+  
+  <title>Crust & Crumbs</title>
+
+  <!-- Icon and Fonts -->
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crust & Crumbs</title>
 </head>
 
 <body>
